tests/paczka1/small_fuzzy/89533854.err
Error in line 5: gAr60uuY A172 96,12
Error in line 7: C6dWN S866 31,5
Error in line 9: 2Oi5CG S770 61,8
Error in line 8: C6dWN A172 47,7
